# games-project

./: Makefile  pyproject.toml
VD_games/: cli.py
VD_games/scripts/: VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  brain_calc.py  engine.py  vd_prime.py  vd_progression.py
