[project]
name = "games-project-Tihonova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
    

[project.scripts]
VD-games = "VD_games.scripts.VD_games:main"
VD-even = "VD_games.scripts.VD_even:main"

VD-gcd = "VD_games.scripts.VD_gcd:main"

[project]
name = "vd_games"
version = "0.1.0"
description = "VD Games project"

[project.scripts]
vd_progression = "scripts.vd_progression:main"
vd_prime = "scripts.vd_prime:main"

